0.1.13  added nice effect for cocktails hovering  BUGS : Not responsive since jquery implementation of hovering effect. Need to ajust media queries with jquery

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ main {
 }
 .cocktails {
     pointer-events: none;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
 }
 
 @media only screen and (min-width: 600px) {
@@ -180,7 +180,11 @@ main {
         margin: 0;
     }
 }
-
+.largerText{
+    position: absolute;
+    bottom: -40%;
+    font-size: 2rem;
+}
 .dropdown-content {
     filter: opacity(0) blur(30px);
     position: absolute;
@@ -195,13 +199,16 @@ main {
 
 .dropdown-content a {
 
-    color: black;
+    color: #790c30;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    background-color: #ffeed6;
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    color: #ffeed6;
+    background-color: #790c30;
+
 }
   
